# redel

./: .gitignore  LICENSE  README.md  bench_engines.py  bench_fanoutqa.py  bench_travelplanner.py  bench_webarena.py  hosted_deploy.md  main.py  pyproject.toml  requirements.txt  score_fanoutqa.py  score_travelplanner.py  score_webarena.py  server.py  test-webarena.sh  viz.py  voice.py
.github/workflows/: docs.yml  lint.yml  pytest.yml  pythonpublish.yml
docs/: api_reference.rst  conf.py  delegation.rst  events.rst  experiments.md  glossary.rst  index.rst  install.rst  redel.rst  tools.rst  viz.rst
experiments/webarena/: auto_login.py  generate_test_data.py  webarena_iface_server.py
kanpai/: __init__.py  app.py  base_kani.py  config.py  core.py  engines.py  eventlogger.py  events.py  kanis.py  logger.py  namer.py  prompts.py  utils.py  webutils.py
kanpai-viz/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json
kanpai-viz/src/: App.vue  global.scss  main.ts  utils.ts
kanpai/delegation/: delegate_and_wait.py  delegate_one.py
kanpai/functions/: email.py
kanpai/mixins/: browsing.py  delegate_and_wait.py  delegate_one.py
redel/: __init__.py  __main__.py  app.py  base_kani.py  config.py  embeddings.py  eventlogger.py  events.py  kanis.py  state.py  tool_config.py  utils.py
redel/delegation/: __init__.py  _base.py  delegate_and_wait.py  delegate_one.py
redel/functions/: fanoutqa.py
redel/server/: .gitignore  __init__.py  __main__.py  indexer.py  models.py  server.py
redel/tools/: __init__.py  _base.py  email.py  fanoutqa.py
redel_server/: __main__.py  server.py  session_manager.py
sandbox/: README.md  commitment_metrics.ipynb  console_utils.py  debug_qwen.ipynb  debug_qwen_2.py  eleven_list_voices.py  foqa_scores_to_csv.py  qwen-fc.py  server-oai-web-search.py  token_count.ipynb  voice.py
scripts/: console_utils.py  hatch_build.py
server/: README.md  app.py  indexer.py  models.py  server.py  session_manager.py  ws.py
slurm/: .gitignore  fanout-3.sh  fanout-eval.sh  fanout-rest.sh  gen_slurm.py  travelplanner-3.sh  travelplanner-rest.sh  webarena-1-full.sh  webarena-2-root-fc.sh  webarena-3-baseline.sh  webarena-4-small-leaf.sh  webarena-5-small-all.sh  webarena-6-small-baseline.sh  webarena-7-short-context.sh  webarena-8-short-baseline.sh  webarena-env.sh  webarena-startup.sh  webarena-test-env.sh
slurm/claude/: fanoutqa-1-full.sh  fanoutqa-2-root-fc.sh  fanoutqa-3-baseline.sh  fanoutqa-4-small-leaf.sh  fanoutqa-5-small-all.sh  fanoutqa-6-small-baseline.sh  fanoutqa-7-short-context.sh  fanoutqa-8-short-baseline.sh  fanoutqa-all.sh  fanoutqa-eval.sh  travelplanner-1-full.sh  travelplanner-2-root-fc.sh  travelplanner-3-baseline.sh  travelplanner-4-small-leaf.sh  travelplanner-5-small-all.sh  travelplanner-6-small-baseline.sh  travelplanner-7-short-context.sh  travelplanner-8-short-baseline.sh  travelplanner-all.sh  webarena-1-full.sh  webarena-2-root-fc.sh  webarena-3-baseline.sh  webarena-4-small-leaf.sh  webarena-5-small-all.sh  webarena-6-small-baseline.sh  webarena-7-short-context.sh  webarena-8-short-baseline.sh  webarena-all.sh
slurm/cohere-hf/: fanoutqa-1-full.sh  fanoutqa-2-root-fc.sh  (+25 more)
utils/: qwen.py  tp_1shot_prompt.txt  tp_nl_to_json.py
viz/: README.md  index.html  package-lock.json  package.json
(+31659 files in other folders)
